Fix: body position fixed, overflow 적용

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,9 @@
   --vh: 100%;
 }
 body {
+  position: fixed;
+  overflow: hidden;
   width: 100%;
+  height: 100%;
   margin: 0;
 }
